<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="currency_exchange">Курсы валют</string>
    <string name="add_valute">Добавить валюту</string>
    <string name="choose_valutes">Выберите валюты</string>
    <string name="save">Сохранить</string>
    <string name="logout_dialog_title">Выход из аккаунта</string>
    <string name="logout_dialog_message">Вы уверены, что хотите выйти?</string>
    <string name="logout_dialog_positive_button">Да</string>
    <string name="logout_dialog_negative_button">Отмена</string>
    <string name="fill_all_fields">Заполните все поля!</string>
    <string name="authentication_failed">Ошибка входа.</string>
    <string name="login_successful">Успешный вход!</string>
    <string name="account_created">Аккаунт создан!</string>
    <string name="exchange">Курсы</string>
    <string name="favorite">Избранное</string>
    <string name="converter">Конвертер</string>
    <string name="settings">Настройки</string>
    <string name="log_out">Выйти</string>
    <string name="get_data">Получить данные</string>
    <string name="user">Пользователь</string>
    <string name="hello_world">Hello World!</string>
    <string name="login">Войти</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="go_to_registration">Нет аккаунта</string>
    <string name="register">Зарегестрироваться</string>
    <string name="go_to_login">Есть аккаунт</string>
    <string name="registration">Регистрация</string>
    <string name="byn">1 BYN</string>
    <string name="eur">1 EUR</string>
    <string name="rub">100 RUB</string>
    <string name="to_convert">Конвертировать</string>
</resources>